Resolving errors and updating the AuthzTokenIntrospector