@@ -5,16 +5,14 @@ import static lombok.AccessLevel.PRIVATE;
 import bio.overture.song.server.security.KeycloakPermission;
 import com.nimbusds.jose.shaded.json.JSONArray;
 import com.nimbusds.jose.shaded.json.JSONObject;
-
 import java.util.*;
-
+import java.util.stream.Collectors;
 import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import lombok.val;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.oauth2.core.OAuth2AuthenticatedPrincipal;
 import org.springframework.security.oauth2.server.resource.authentication.BearerTokenAuthentication;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
-import org.springframework.security.oauth2.server.resource.introspection.OAuth2IntrospectionAuthenticatedPrincipal;
 
 @Slf4j
 @NoArgsConstructor(access = PRIVATE)
@@ -22,37 +20,36 @@ public class Scopes {
 
   private static final String EXP = "exp";
 
-  public static Set<String> extractGrantedScopes(Authentication authentication) {
-    // Check if the Authentication provided was from JWT or ApiKey, then extract the scopes
-    Set<String> grantedScopes = Collections.emptySet();
-    if (authentication instanceof JwtAuthenticationToken) {
-      grantedScopes = getJwtScopes((JwtAuthenticationToken) authentication);
-    } else if (authentication instanceof BearerTokenAuthentication) {
-      grantedScopes = getApiKeyScopes((BearerTokenAuthentication) authentication);
+  public static Set<String> extractGrantedScopes(Object source) {
+    if (source instanceof Authentication) {
+      Authentication authentication = (Authentication) source;
+      if (authentication instanceof JwtAuthenticationToken) {
+        return getJwtScopes((JwtAuthenticationToken) authentication);
+      } else if (authentication instanceof BearerTokenAuthentication) {
+        return getApiKeyScopes(((BearerTokenAuthentication) authentication).getPrincipal());
+      }
+      return Collections.emptySet();
     }
-    return grantedScopes;
+    return getApiKeyScopes(source);
   }
 
   public static Set<String> extractGrantedScopesFromRpt(List<KeycloakPermission> permissionList) {
-    Set<String> grantedScopes = new HashSet();
-
-    permissionList
-        .stream()
-        .filter(perm -> perm.getScopes() != null)
-        .forEach(permission -> {
-          permission.getScopes().stream().forEach(scope -> {
-            val fullScope = permission.getRsname() + "." + scope;
-            grantedScopes.add(fullScope);
-          });
-        });
-
+    Set<String> grantedScopes = new HashSet<>();
+    for (KeycloakPermission permission : permissionList) {
+      if (permission.getScopes() != null) {
+        for (String scope : permission.getScopes()) {
+          String fullScope = permission.getRsname() + "." + scope;
+          grantedScopes.add(fullScope);
+        }
+      }
+    }
     return grantedScopes;
   }
 
   public static long extractExpiry(Map<String, ?> map) {
     Object exp = map.get(EXP);
     if (exp instanceof Integer) {
-      return (Integer) exp;
+      return ((Integer) exp).longValue();
     } else if (exp instanceof Long) {
       return (Long) exp;
     }
@@ -60,16 +57,18 @@ public class Scopes {
   }
 
   private static Set<String> getJwtScopes(JwtAuthenticationToken jwt) {
-    Set<String> output = new HashSet();
+    Set<String> output = new HashSet<>();
     try {
-      val context = jwt.getToken().getClaim("context");
+      Object context = jwt.getToken().getClaim("context");
       if (context instanceof JSONObject) {
-        val scopes = ((JSONObject) context).get("scope");
+        Object scopes = ((JSONObject) context).get("scope");
         if (scopes instanceof JSONArray) {
-          val scopeArray = (JSONArray) scopes;
-          scopeArray.stream()
-              .filter(value -> value instanceof String)
-              .forEach(value -> output.add((String) value));
+          JSONArray scopeArray = (JSONArray) scopes;
+          for (Object value : scopeArray) {
+            if (value instanceof String) {
+              output.add((String) value);
+            }
+          }
         }
       }
     } catch (ClassCastException e) {
@@ -78,10 +77,37 @@ public class Scopes {
     return output;
   }
 
-  private static Set<String> getApiKeyScopes(BearerTokenAuthentication tokenAuthentication) {
-    val scopes =
-        ((OAuth2IntrospectionAuthenticatedPrincipal) tokenAuthentication.getPrincipal())
-            .getScopes();
-    return Set.copyOf(scopes);
+
+  private static Set<String> getApiKeyScopes(Object principal) {
+    if (!(principal instanceof OAuth2AuthenticatedPrincipal)) {
+      return Collections.emptySet();
+    }
+
+    OAuth2AuthenticatedPrincipal oAuth2Principal = (OAuth2AuthenticatedPrincipal) principal;
+
+    Object scopeClaim = oAuth2Principal.getAttribute("scope");
+    if (scopeClaim instanceof String) {
+      String scopeString = (String) scopeClaim;
+      return Arrays.stream(scopeString.split(" "))
+          .filter(s -> !s.isBlank())
+          .collect(Collectors.toSet());
+    } else if (scopeClaim instanceof Collection) {
+      Collection<?> scopeCollection = (Collection<?>) scopeClaim;
+      return scopeCollection.stream()
+          .map(Object::toString)
+          .filter(s -> !s.isBlank())
+          .collect(Collectors.toSet());
+    }
+
+    Object scpClaim = oAuth2Principal.getAttribute("scp");
+    if (scpClaim instanceof Collection) {
+      Collection<?> scpCollection = (Collection<?>) scpClaim;
+      return scpCollection.stream()
+          .map(Object::toString)
+          .filter(s -> !s.isBlank())
+          .collect(Collectors.toSet());
+    }
+
+    return Collections.emptySet();
   }
 }
